// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailField /> component should render correctly when required 1`] = `
<div
  aria-required={true}
  className="MuiFormControl-root MuiTextField-root"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      aria-required={true}
      autoCapitalize="none"
      autoComplete="email"
      autoCorrect="off"
      autoFocus={false}
      className="MuiInputBase-input MuiInput-input"
      data-name="email"
      disabled={false}
      id="email"
      inputMode="email"
      maxLength={254}
      minLength={3}
      multiple={false}
      name="email"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      size={50}
      tabIndex={0}
      type="email"
    />
  </div>
</div>
`;

exports[`<EmailField /> component should render correctly with no props 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoCapitalize="none"
      autoComplete="email"
      autoCorrect="off"
      autoFocus={false}
      className="MuiInputBase-input MuiInput-input"
      data-name="email"
      disabled={false}
      id="email"
      inputMode="email"
      maxLength={254}
      minLength={3}
      multiple={false}
      name="email"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      size={50}
      tabIndex={0}
      type="email"
    />
  </div>
</div>
`;

exports[`<EmailField /> component should render correctly with no required 1`] = `
<div
  aria-required={false}
  className="MuiFormControl-root MuiTextField-root"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoCapitalize="none"
      autoComplete="email"
      autoCorrect="off"
      autoFocus={false}
      className="MuiInputBase-input MuiInput-input"
      data-name="email"
      disabled={false}
      id="email"
      inputMode="email"
      maxLength={254}
      minLength={3}
      multiple={false}
      name="email"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      size={50}
      tabIndex={0}
      type="email"
    />
  </div>
</div>
`;
